# CHIP-8-Rust-Emulator

./: Cargo.toml
src/: chip8.rs  main.rs  memory.rs
